# caraml

./: .gitignore  ChangeLog.md  Dockerfile  LICENSE  Makefile  README.md  a.out  cabal.project  caraml.cabal  package.yaml
.devcontainer/: devcontainer.json
.github/workflows/: build-and-push-docker.yml  build-and-test-archive.yml  build-and-test.yml  build-and-test2.yml  haskell.yml
app/: Main.hs
design/: full_sml_ebnf.txt  mini_ebnf.txt
runtime/: runtime.c
scripts/: install-llvm.sh
src/: Common.hs  Compile.hs  Error.hs  Lexer.hs  Lib.hs  Parser.hs  ToLlvm.hs  TypeCheck.hs  TypeInfer.hs
test/: LexerTest.hs  LlvmTest.hs  ParserTest.hs  Spec.hs  TestCases.hs  TestUtils.hs  TypeTest.hs  file.cml  file.ll
