cabal-version: 3.8

name:           caraml
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/ValerianClerc/caraml#readme>
homepage:       https://github.com/ValerianClerc/caraml#readme
bug-reports:    https://github.com/ValerianClerc/caraml/issues
author:         Valerian Clerc
maintainer:     valerian.clerc@gmail.com
copyright:      2021 Valerian Clerc
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/ValerianClerc/caraml

library
  exposed-modules:
      Lexer
      Lib
      Parser
      TypeInfer
      Common
      Error
      ToLlvm
      Compile
  other-modules:
      Paths_caraml
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , split
    , deepseq
    , llvm-hs-pure >= 9.0.0 && < 10.0.0
    , llvm-hs-pretty >= 0.9.0 && < 1.0.0
    , text
    , containers
    , directory
    , process
  default-language: Haskell2010

executable caraml-exe
  main-is: Main.hs
  other-modules:
      Paths_caraml
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , filepath
    , caraml
  default-language: Haskell2010

test-suite caraml-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      LexerTest
      ParserTest
      TypeTest
      LlvmTest
      TestCases
      TestUtils
      Paths_caraml
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck
    , base >=4.7 && <5
    , caraml
    , hspec
    , split
    , deepseq
    , text
    , containers
    , mtl
    , llvm-hs-pure >= 9.0.0 && < 10.0.0
    , llvm-hs-pretty >= 0.9.0 && < 1.0.0
  default-language: Haskell2010
